Astralebene: remove obsole XP warning, fix stray map note

--- a/mod/area/astralebene.git.yml
+++ b/mod/area/astralebene.git.yml
@@ -37,7 +37,7 @@ Door List:
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
-    GenericType: {type: :byte, value: 0}
+    GenericType_New: {type: :dword, value: 0}
     HP: {type: :short, value: 80}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
@@ -94,342 +94,6 @@ List:
 Placeable List: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 9
-    AnimationState: {type: :byte, value: 0}
-    Appearance: {type: :dword, value: 144}
-    AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
-    BodyBag: {type: :byte, value: 0}
-    CloseLockDC: {type: :byte, value: 0}
-    Conversation: {type: :resref, value: ""}
-    CurrentHP: {type: :short, value: 15}
-    Description: 
-      type: :cexolocstr
-      str_ref: 14567
-      value: 
-        0: "Keine Panik, bitte! Alles wird wieder gut =/\n\n\
-          o Wo bin ich hier?\n\n\
-          Dies hier ist die Astralebene. Ihr seid hier, weil die Lebenspunkte eures Charakters unter 0 gesunken sind.\n\n\
-          o Bedeutet, das, dass mein Charakter tot ist?\n\n\
-          Im Normalfall, ja. Allerdings ist das nicht zwingend. Es ist euch \xFCberlassen ob euer Charakter gestorben, bewusstlos geschlagen wurde, oder einfach nur Kampfunf\xE4hig ist.\n\n\
-          o Warum habe ich denn Erfahrungspunkte verloren?\n\n\
-          Wenn die Lebenspunkte eures Charakters unter 0 fallen und ihr hierher gelangt verliert ihr einen ganz geringen Teil eurer Erfahrungspunkte als kleinen Anreiz euren Erfahrungsschatz in dieser Hinsicht auf ein Minimum zu beschr\xE4nken. Es gibt n\xE4mlich Leute, die sich \xFCberhaupt nicht darum k\xFCmmern ob sie eine Begegnung mit Gegnern \xFCberstehen oder nicht. Sowas ist im RP unerw\xFCnscht. Allerdings versch\xE4tzt sich jeder irgendwann einmal oder die W\xFCrfel wollen gerade nicht. Geh\xF6rt ihr nicht zu erw\xE4hnter Gruppe werdet ihr sowiso nicht h\xE4ufig hier sein und braucht euch auch daher auch keine Sorgen machen =)\n\n\
-          o Hmm, doof... und was jetzt?\n\n\
-          Nun, wenn ihr bereit seid die Reiche der Silbermarken erneut zu betreten, folgt einfach den Zeichen zum Ausgang, oder wartet, ob jemand euren Charakter findet und in einem Tempel bringt.\n\
-          Achtung: Wenn ihr die Reiche selbstst\xE4ndig betretet, verliert ihr noch einmal einen ganz geringen Teil eurer Erfahrungspunkte. Es ist daher ratsam auf Hilfe zu hoffen... au\xDFerdem k\xF6nnte das interessantes Rp ergeben.\n\
-          Bitte beachtet jedoch im Rollenspiel, dass euer Charakter durch dieses Erlebnis ersteinmal geschw\xE4cht ist und nicht gleich wieder weiter k\xE4mpfen/Reisen/etc. kann.\n\n\
-          Vielen Dank f\xFCrs Lesen =)"
-    DisarmDC: {type: :byte, value: 15}
-    Faction: {type: :dword, value: 1}
-    Fort: {type: :byte, value: 16}
-    HP: {type: :short, value: 15}
-    Hardness: {type: :byte, value: 5}
-    HasInventory: {type: :byte, value: 0}
-    Interruptable: {type: :byte, value: 1}
-    KeyName: {type: :cexostr, value: ""}
-    KeyRequired: {type: :byte, value: 0}
-    LocName: 
-      type: :cexolocstr
-      str_ref: 14561
-      value: 
-        0: Keine Panik, alles wird Gut =/ [bitte lies mich]
-    Lockable: {type: :byte, value: 0}
-    Locked: {type: :byte, value: 0}
-    OnClick: {type: :resref, value: ""}
-    OnClosed: {type: :resref, value: ""}
-    OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: ""}
-    OnDisarm: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnInvDisturbed: {type: :resref, value: ""}
-    OnLock: {type: :resref, value: ""}
-    OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: ""}
-    OnSpellCastAt: {type: :resref, value: ""}
-    OnTrapTriggered: {type: :resref, value: ""}
-    OnUnlock: {type: :resref, value: ""}
-    OnUsed: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    OpenLockDC: {type: :byte, value: 18}
-    Plot: {type: :byte, value: 1}
-    PortraitId: {type: :word, value: 502}
-    Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: MerchantsShingle7}
-    TemplateResRef: {type: :resref, value: plc_billboard7}
-    TrapDetectDC: {type: :byte, value: 0}
-    TrapDetectable: {type: :byte, value: 1}
-    TrapDisarmable: {type: :byte, value: 1}
-    TrapFlag: {type: :byte, value: 0}
-    TrapOneShot: {type: :byte, value: 1}
-    TrapType: {type: :byte, value: 0}
-    Type: {type: :byte, value: 0}
-    Useable: {type: :byte, value: 1}
-    Will: {type: :byte, value: 0}
-    X: {type: :float, value: 42.6757}
-    Y: {type: :float, value: 18.4158}
-    Z: {type: :float, value: -0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 9
-    AnimationState: {type: :byte, value: 0}
-    Appearance: {type: :dword, value: 76}
-    AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
-    BodyBag: {type: :byte, value: 0}
-    CloseLockDC: {type: :byte, value: 0}
-    Conversation: {type: :resref, value: ""}
-    CurrentHP: {type: :short, value: 15}
-    Description: 
-      type: :cexolocstr
-      str_ref: 14681
-      value: {}
-
-    DisarmDC: {type: :byte, value: 15}
-    Faction: {type: :dword, value: 1}
-    Fort: {type: :byte, value: 16}
-    HP: {type: :short, value: 15}
-    Hardness: {type: :byte, value: 5}
-    HasInventory: {type: :byte, value: 0}
-    Interruptable: {type: :byte, value: 1}
-    KeyName: {type: :cexostr, value: ""}
-    KeyRequired: {type: :byte, value: 0}
-    LocName: 
-      type: :cexolocstr
-      str_ref: 5718
-      value: {}
-
-    Lockable: {type: :byte, value: 0}
-    Locked: {type: :byte, value: 0}
-    OnClick: {type: :resref, value: ""}
-    OnClosed: {type: :resref, value: ""}
-    OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: ""}
-    OnDisarm: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnInvDisturbed: {type: :resref, value: ""}
-    OnLock: {type: :resref, value: ""}
-    OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: ""}
-    OnSpellCastAt: {type: :resref, value: ""}
-    OnTrapTriggered: {type: :resref, value: ""}
-    OnUnlock: {type: :resref, value: ""}
-    OnUsed: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    OpenLockDC: {type: :byte, value: 18}
-    Plot: {type: :byte, value: 0}
-    PortraitId: {type: :word, value: 434}
-    Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 1}
-    Tag: {type: :cexostr, value: Pedestal}
-    TemplateResRef: {type: :resref, value: plc_pedestal}
-    TrapDetectDC: {type: :byte, value: 0}
-    TrapDetectable: {type: :byte, value: 1}
-    TrapDisarmable: {type: :byte, value: 1}
-    TrapFlag: {type: :byte, value: 0}
-    TrapOneShot: {type: :byte, value: 1}
-    TrapType: {type: :byte, value: 0}
-    Type: {type: :byte, value: 0}
-    Useable: {type: :byte, value: 0}
-    Will: {type: :byte, value: 0}
-    X: {type: :float, value: 44.3946}
-    Y: {type: :float, value: 18.7986}
-    Z: {type: :float, value: -0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 9
-    AnimationState: {type: :byte, value: 0}
-    Appearance: {type: :dword, value: 76}
-    AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
-    BodyBag: {type: :byte, value: 0}
-    CloseLockDC: {type: :byte, value: 0}
-    Conversation: {type: :resref, value: ""}
-    CurrentHP: {type: :short, value: 15}
-    Description: 
-      type: :cexolocstr
-      str_ref: 14681
-      value: {}
-
-    DisarmDC: {type: :byte, value: 15}
-    Faction: {type: :dword, value: 1}
-    Fort: {type: :byte, value: 16}
-    HP: {type: :short, value: 15}
-    Hardness: {type: :byte, value: 5}
-    HasInventory: {type: :byte, value: 0}
-    Interruptable: {type: :byte, value: 1}
-    KeyName: {type: :cexostr, value: ""}
-    KeyRequired: {type: :byte, value: 0}
-    LocName: 
-      type: :cexolocstr
-      str_ref: 5718
-      value: {}
-
-    Lockable: {type: :byte, value: 0}
-    Locked: {type: :byte, value: 0}
-    OnClick: {type: :resref, value: ""}
-    OnClosed: {type: :resref, value: ""}
-    OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: ""}
-    OnDisarm: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnInvDisturbed: {type: :resref, value: ""}
-    OnLock: {type: :resref, value: ""}
-    OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: ""}
-    OnSpellCastAt: {type: :resref, value: ""}
-    OnTrapTriggered: {type: :resref, value: ""}
-    OnUnlock: {type: :resref, value: ""}
-    OnUsed: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    OpenLockDC: {type: :byte, value: 18}
-    Plot: {type: :byte, value: 0}
-    PortraitId: {type: :word, value: 434}
-    Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 1}
-    Tag: {type: :cexostr, value: Pedestal}
-    TemplateResRef: {type: :resref, value: plc_pedestal}
-    TrapDetectDC: {type: :byte, value: 0}
-    TrapDetectable: {type: :byte, value: 1}
-    TrapDisarmable: {type: :byte, value: 1}
-    TrapFlag: {type: :byte, value: 0}
-    TrapOneShot: {type: :byte, value: 1}
-    TrapType: {type: :byte, value: 0}
-    Type: {type: :byte, value: 0}
-    Useable: {type: :byte, value: 0}
-    Will: {type: :byte, value: 0}
-    X: {type: :float, value: 40.9237}
-    Y: {type: :float, value: 18.7633}
-    Z: {type: :float, value: -0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 9
-    AnimationState: {type: :byte, value: 0}
-    Appearance: {type: :dword, value: 151}
-    AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
-    BodyBag: {type: :byte, value: 0}
-    CloseLockDC: {type: :byte, value: 0}
-    Conversation: {type: :resref, value: ""}
-    CurrentHP: {type: :short, value: 15}
-    Description: 
-      type: :cexolocstr
-      str_ref: 14627
-      value: {}
-
-    DisarmDC: {type: :byte, value: 15}
-    Faction: {type: :dword, value: 1}
-    Fort: {type: :byte, value: 16}
-    HP: {type: :short, value: 15}
-    Hardness: {type: :byte, value: 5}
-    HasInventory: {type: :byte, value: 0}
-    Interruptable: {type: :byte, value: 1}
-    KeyName: {type: :cexostr, value: ""}
-    KeyRequired: {type: :byte, value: 0}
-    LocName: 
-      type: :cexolocstr
-      str_ref: 14625
-      value: {}
-
-    Lockable: {type: :byte, value: 0}
-    Locked: {type: :byte, value: 0}
-    OnClick: {type: :resref, value: ""}
-    OnClosed: {type: :resref, value: ""}
-    OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: ""}
-    OnDisarm: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnInvDisturbed: {type: :resref, value: ""}
-    OnLock: {type: :resref, value: ""}
-    OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: ""}
-    OnSpellCastAt: {type: :resref, value: ""}
-    OnTrapTriggered: {type: :resref, value: ""}
-    OnUnlock: {type: :resref, value: ""}
-    OnUsed: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    OpenLockDC: {type: :byte, value: 18}
-    Plot: {type: :byte, value: 0}
-    PortraitId: {type: :word, value: 509}
-    Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 1}
-    Tag: {type: :cexostr, value: Flame - Small}
-    TemplateResRef: {type: :resref, value: plc_flamesmall}
-    TrapDetectDC: {type: :byte, value: 0}
-    TrapDetectable: {type: :byte, value: 1}
-    TrapDisarmable: {type: :byte, value: 1}
-    TrapFlag: {type: :byte, value: 0}
-    TrapOneShot: {type: :byte, value: 1}
-    TrapType: {type: :byte, value: 0}
-    Type: {type: :byte, value: 0}
-    Useable: {type: :byte, value: 0}
-    Will: {type: :byte, value: 0}
-    X: {type: :float, value: 41.0653}
-    Y: {type: :float, value: 18.7575}
-    Z: {type: :float, value: 1.4604}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 9
-    AnimationState: {type: :byte, value: 0}
-    Appearance: {type: :dword, value: 151}
-    AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -0.0}
-    BodyBag: {type: :byte, value: 0}
-    CloseLockDC: {type: :byte, value: 0}
-    Conversation: {type: :resref, value: ""}
-    CurrentHP: {type: :short, value: 15}
-    Description: 
-      type: :cexolocstr
-      str_ref: 14627
-      value: {}
-
-    DisarmDC: {type: :byte, value: 15}
-    Faction: {type: :dword, value: 1}
-    Fort: {type: :byte, value: 16}
-    HP: {type: :short, value: 15}
-    Hardness: {type: :byte, value: 5}
-    HasInventory: {type: :byte, value: 0}
-    Interruptable: {type: :byte, value: 1}
-    KeyName: {type: :cexostr, value: ""}
-    KeyRequired: {type: :byte, value: 0}
-    LocName: 
-      type: :cexolocstr
-      str_ref: 14625
-      value: {}
-
-    Lockable: {type: :byte, value: 0}
-    Locked: {type: :byte, value: 0}
-    OnClick: {type: :resref, value: ""}
-    OnClosed: {type: :resref, value: ""}
-    OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: ""}
-    OnDisarm: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnInvDisturbed: {type: :resref, value: ""}
-    OnLock: {type: :resref, value: ""}
-    OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: ""}
-    OnSpellCastAt: {type: :resref, value: ""}
-    OnTrapTriggered: {type: :resref, value: ""}
-    OnUnlock: {type: :resref, value: ""}
-    OnUsed: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    OpenLockDC: {type: :byte, value: 18}
-    Plot: {type: :byte, value: 0}
-    PortraitId: {type: :word, value: 509}
-    Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 1}
-    Tag: {type: :cexostr, value: Flame - Small}
-    TemplateResRef: {type: :resref, value: plc_flamesmall}
-    TrapDetectDC: {type: :byte, value: 0}
-    TrapDetectable: {type: :byte, value: 1}
-    TrapDisarmable: {type: :byte, value: 1}
-    TrapFlag: {type: :byte, value: 0}
-    TrapOneShot: {type: :byte, value: 1}
-    TrapType: {type: :byte, value: 0}
-    Type: {type: :byte, value: 0}
-    Useable: {type: :byte, value: 0}
-    Will: {type: :byte, value: 0}
-    X: {type: :float, value: 44.5095}
-    Y: {type: :float, value: 18.8081}
-    Z: {type: :float, value: 1.4604}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 9
     AnimationState: {type: :byte, value: 0}
@@ -1017,79 +681,8 @@ Placeable List:
     Z: {type: :float, value: 0.0}
 SoundList: 
   type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 6
-    Active: {type: :byte, value: 1}
-    Continuous: {type: :byte, value: 0}
-    Elevation: {type: :float, value: 1.5}
-    GeneratedType: {type: :dword, value: 0}
-    Hours: {type: :dword, value: 0}
-    Interval: {type: :dword, value: 0}
-    IntervalVrtn: {type: :dword, value: 0}
-    LocName: 
-      type: :cexolocstr
-      str_ref: 68002
-      value: {}
+  value: []
 
-    Looping: {type: :byte, value: 1}
-    MaxDistance: {type: :float, value: 10.0}
-    MinDistance: {type: :float, value: 1.0}
-    PitchVariation: {type: :float, value: 0.0}
-    Positional: {type: :byte, value: 1}
-    Priority: {type: :byte, value: 3}
-    Random: {type: :byte, value: 0}
-    RandomPosition: {type: :byte, value: 0}
-    RandomRangeX: {type: :float, value: 0.0}
-    RandomRangeY: {type: :float, value: 0.0}
-    Sounds: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Sound: {type: :resref, value: al_cv_firetorch1}}
-    Tag: {type: :cexostr, value: TorchFireSmall}
-    TemplateResRef: {type: :resref, value: torchfiresmall}
-    Times: {type: :byte, value: 3}
-    Volume: {type: :byte, value: 127}
-    VolumeVrtn: {type: :byte, value: 0}
-    XPosition: {type: :float, value: 44.4028}
-    YPosition: {type: :float, value: 18.7705}
-    ZPosition: {type: :float, value: 1.5}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 6
-    Active: {type: :byte, value: 1}
-    Continuous: {type: :byte, value: 0}
-    Elevation: {type: :float, value: 1.5}
-    GeneratedType: {type: :dword, value: 0}
-    Hours: {type: :dword, value: 0}
-    Interval: {type: :dword, value: 0}
-    IntervalVrtn: {type: :dword, value: 0}
-    LocName: 
-      type: :cexolocstr
-      str_ref: 68002
-      value: {}
-
-    Looping: {type: :byte, value: 1}
-    MaxDistance: {type: :float, value: 10.0}
-    MinDistance: {type: :float, value: 1.0}
-    PitchVariation: {type: :float, value: 0.0}
-    Positional: {type: :byte, value: 1}
-    Priority: {type: :byte, value: 3}
-    Random: {type: :byte, value: 0}
-    RandomPosition: {type: :byte, value: 0}
-    RandomRangeX: {type: :float, value: 0.0}
-    RandomRangeY: {type: :float, value: 0.0}
-    Sounds: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Sound: {type: :resref, value: al_cv_firetorch1}}
-    Tag: {type: :cexostr, value: TorchFireSmall}
-    TemplateResRef: {type: :resref, value: torchfiresmall}
-    Times: {type: :byte, value: 3}
-    Volume: {type: :byte, value: 127}
-    VolumeVrtn: {type: :byte, value: 0}
-    XPosition: {type: :float, value: 40.9405}
-    YPosition: {type: :float, value: 18.673}
-    ZPosition: {type: :float, value: 1.5}
 StoreList: 
   type: :list
   value: []
@@ -1142,33 +735,6 @@ WaypointList:
     ZPosition: {type: :float, value: 0.0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 5
-    Appearance: {type: :byte, value: 1}
-    Description: 
-      type: :cexolocstr
-      value: {}
-
-    HasMapNote: {type: :byte, value: 1}
-    LinkedTo: {type: :cexostr, value: ""}
-    LocalizedName: 
-      type: :cexolocstr
-      str_ref: 14814
-      value: 
-        0: Kartennotiz
-    MapNote: 
-      type: :cexolocstr
-      str_ref: 14815
-      value: 
-        0: <Text hier eingeben>
-    MapNoteEnabled: {type: :byte, value: 1}
-    Tag: {type: :cexostr, value: LOOT_WP}
-    TemplateResRef: {type: :resref, value: nw_mapnote001}
-    XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 70.1857}
-    YOrientation: {type: :float, value: 1.0}
-    YPosition: {type: :float, value: 34.4882}
-    ZPosition: {type: :float, value: 0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 5
     Appearance: {type: :byte, value: 3}
     Description: 
       type: :cexolocstr
@@ -1191,4 +757,31 @@ WaypointList:
     XPosition: {type: :float, value: 33.532}
     YOrientation: {type: :float, value: 1.0}
     YPosition: {type: :float, value: 59.404}
-    ZPosition: {type: :float, value: 0.0}
+    ZPosition: {type: :float, value: -0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 5
+    Appearance: {type: :byte, value: 1}
+    Description: 
+      type: :cexolocstr
+      value: {}
+
+    HasMapNote: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: ""}
+    LocalizedName: 
+      type: :cexolocstr
+      str_ref: 14814
+      value: 
+        0: Kartennotiz
+    MapNote: 
+      type: :cexolocstr
+      str_ref: 14815
+      value: 
+        0: <Text hier eingeben>
+    MapNoteEnabled: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: LOOT_WP}
+    TemplateResRef: {type: :resref, value: nw_mapnote001}
+    XOrientation: {type: :float, value: 0.0}
+    XPosition: {type: :float, value: 70.1857}
+    YOrientation: {type: :float, value: 1.0}
+    YPosition: {type: :float, value: 34.4882}
+    ZPosition: {type: :float, value: -0.0}
