all areas: remove obsolete w_a, area_marker waypoints

--- a/mod/area/gabel_festung_w.git.yml
+++ b/mod/area/gabel_festung_w.git.yml
@@ -1127,29 +1127,5 @@ VarTable:
     Value: {type: :int, value: 1}
 WaypointList: 
   type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 5
-    Appearance: {type: :byte, value: 3}
-    Description: 
-      type: :cexolocstr
-      value: 
-        4: ""
-    HasMapNote: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: ""}
-    LocalizedName: 
-      type: :cexolocstr
-      value: 
-        0: area_marker
-    MapNote: 
-      type: :cexolocstr
-      value: {}
+  value: []
 
-    MapNoteEnabled: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: area_marker}
-    TemplateResRef: {type: :resref, value: area_marker}
-    XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 68.8567}
-    YOrientation: {type: :float, value: 1.0}
-    YPosition: {type: :float, value: 14.3902}
-    ZPosition: {type: :float, value: 0.0}
