--- a/mod/area/gebiet001.git.yml
+++ b/mod/area/gebiet001.git.yml
@@ -10252,29 +10252,5 @@ VarTable:
     Value: {type: :int, value: 1}
 WaypointList: 
   type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 5
-    Appearance: {type: :byte, value: 3}
-    Description: 
-      type: :cexolocstr
-      value: 
-        4: ""
-    HasMapNote: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: ""}
-    LocalizedName: 
-      type: :cexolocstr
-      value: 
-        0: area_marker
-    MapNote: 
-      type: :cexolocstr
-      value: {}
+  value: []
 
-    MapNoteEnabled: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: area_marker}
-    TemplateResRef: {type: :resref, value: area_marker}
-    XOrientation: {type: :float, value: 0.5556}
-    XPosition: {type: :float, value: 27.6106}
-    YOrientation: {type: :float, value: 0.8315}
-    YPosition: {type: :float, value: 51.7718}
-    ZPosition: {type: :float, value: -0.0}
