Gabel grid: flag as always explored

--- a/mod/area/gabel_ost.git.yml
+++ b/mod/area/gabel_ost.git.yml
@@ -21401,6 +21401,11 @@ VarTable:
     Name: {type: :cexostr, value: glocke_festung}
     Type: {type: :dword, value: 1}
     Value: {type: :int, value: 1}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 0
+    Name: {type: :cexostr, value: always_explored}
+    Type: {type: :dword, value: 1}
+    Value: {type: :int, value: 1}
 WaypointList: 
   type: :list
   value: 
